# smeagol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Smeagol.toml
src/: config.rs  error.rs  filetype.rs  git.rs  main.rs  path.rs  smeagol.rs  warp_helper.rs
static/: style.css
templates/: 500.html.hbs  base.html.hbs  edit.html.hbs  edit_cannot_exist.html.hbs  edit_could_not_exist.html.hbs  get.html.hbs  get_not_found.html.hbs  list.html.hbs  list_not_found.html.hbs
