[package]
name = "smeagol"
version = "0.1.0"
authors = ["TheSilvus <renkenor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.8"
handlebars = "1"
log = "0.4"
percent-encoding = "1"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
warp = "0.1"

[dev-dependencies]
tempdir = "0.3"
